Wed Sep 27 12:00:00 1995  John Rivlin <jrivlin@fusion.com>

	* autoconf.h: Removed this file.  Now taken from libraries
		directory.
		
	* KerberosHeaders.pch: Removed this file.  Now taken from
		libraries directory.

Wed Sep 20 12:00:00 1995  James Mattly <mattly@fusion.com>

	* kconfig.sit.hqx: update project files to include kadm source for 
		change password.

	* KerberosHeaders.pch: updated to handle compilation of kadm for 
		change password.

Sun Sep 10 12:00:00 1995  James Mattly <mattly@fusion.com>

	* ChangeLog created
	
	* kconfig.sit.hqx: Project file changed to include new files 
		and renamed files.